# SoftwareRayTracer

./: .gitignore  CMakeLists.txt  Doxyfile.in.back
Demo/Base/: 10DemoCamera.cpp  11DemoDefocusBlur.cpp  12DemoRandomSphere.cpp  13DemoMotionBlur.cpp  14DemoTextureCoordinates.cpp  15DemoNoise.cc  16DemoTexture.cc  17DemoLight.cc  18DemoEmptyCornellBox.cc  19DemoStandardCornellBox.cc  1DemoImage.cpp  20DemoSmokeCornellBox.cc  21DemoBaseSence.cc  2DemoSendRay.cpp  3Demo2DSphere.cpp  4DemoNormalSphere.cpp  6DemoAntialiasing.cpp  7DemoDiffuse.cpp  8DemoMetal.cpp  9DemoDielectrics.cpp  CMakeLists.txt  Other.cpp  temp.cc
Doc/: CMakeLists.txt  Doxyfile.in  代码规范.md
Doc/doxygen/: footer.html
Doc/html/: _a_a_b_b_8h.html  _a_a_b_b_8h__incl.map  _a_a_b_b_8h__incl.md5  _a_a_b_b_8h_a54cb5179aae23e38c61baef896ddcb6b_cgraph.map  _a_a_b_b_8h_a54cb5179aae23e38c61baef896ddcb6b_cgraph.md5  _a_a_b_b_8h_a54cb5179aae23e38c61baef896ddcb6b_icgraph.map  _a_a_b_b_8h_a54cb5179aae23e38c61baef896ddcb6b_icgraph.md5  _a_a_b_b_8h_source.html  _box_8h.html  _box_8h__incl.map  _box_8h__incl.md5  _box_8h_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _camera_8h.html  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h__incl.md5  _camera_8h_source.html  _color_8h.html  _color_8h__incl.map  _color_8h__incl.md5  _color_8h_a62f074b695c0d70726abedabf84d9c79_cgraph.map  _color_8h_a62f074b695c0d70726abedabf84d9c79_cgraph.md5  _color_8h_source.html  (+400 more)
Geometry/: CMakeLists.txt
Math/: CMakeLists.txt
Render/: CMakeLists.txt
(+222 files in other folders)
